# automation-fun

./: automation_fun.py  numbers.txt  potential-contacts.txt  pyproject.toml
