[tool.poetry]
name = "automation_fun"
version = "0.1.0"
description = ""
authors = ["sam <samuelclark907@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
